--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,15 @@ coverage
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
+# VSCode directory
+.vscode
+
+# Package Lock
+package-lock.json
+
+# Dist directory
+dist
+
 # Bower dependency directory (https://bower.io/)
 bower_components
 
