--- a/package.json
+++ b/package.json
@@ -24,20 +24,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/fs-extra": "^8.0.1",
     "@types/request": "^2.48.3",
     "express": "^4.17.1",
     "express-openapi": "^5.0.0",
     "express-openapi-validator": "^2.14.2",
     "firebase-admin": "^8.7.0",
-    "request": "^2.88.0"
+    "fs-extra": "^8.1.0",
+    "js-yaml": "^3.13.1",
+    "request": "^2.88.0",
+    "yauzl": "^2.10.0"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.1",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.2",
     "@types/express-openapi": "^1.9.0",
+    "@types/js-yaml": "^3.12.1",
     "@types/morgan": "^1.7.37",
     "@types/node": "^12.12.7",
+    "@types/yauzl": "^2.9.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "eslint": "^6.6.0",
