--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@types/fs-extra": "^8.0.1",
     "@types/request": "^2.48.3",
+    "@types/request-promise-native": "^1.0.17",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-openapi": "^5.0.0",
@@ -34,6 +35,7 @@
     "fs-extra": "^8.1.0",
     "js-yaml": "^3.13.1",
     "request": "^2.88.0",
+    "request-promise-native": "^1.0.8",
     "yauzl": "^2.10.0"
   },
   "devDependencies": {
