--- a/package.json
+++ b/package.json
@@ -31,11 +31,13 @@
     "express": "^4.17.1",
     "express-openapi": "^5.0.0",
     "express-openapi-validator": "^2.14.2",
+    "fetch": "^1.1.0",
     "firebase-admin": "^8.7.0",
     "fs-extra": "^8.1.0",
     "js-yaml": "^3.13.1",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.8",
+    "swagger-ui-express": "^4.1.3",
     "yauzl": "^2.10.0"
   },
   "devDependencies": {
@@ -47,6 +49,7 @@
     "@types/js-yaml": "^3.12.1",
     "@types/morgan": "^1.7.37",
     "@types/node": "^12.12.7",
+    "@types/swagger-ui-express": "^4.1.1",
     "@types/yauzl": "^2.9.1",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
