--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bull-board": "^0.6.0",
     "@types/fs-extra": "^8.0.1",
     "@types/request": "^2.48.3",
     "@types/request-promise-native": "^1.0.17",
+    "bull": "^3.16.0",
+    "bull-board": "^0.9.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-openapi": "^5.0.0",
@@ -42,6 +45,7 @@
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.1",
+    "@types/bull": "^3.14.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
