--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,15 @@
 version: '3'
 services:
+  redis:
+    image: redis
+    ports:
+      - "26379:6379"
   ensemble-manager:
     build: .
     image: mintproject/ensemble-manager
     restart: always
+    depends_on:
+      - redis
     env_file:
      - .env
     ports:
