--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "bull": "^3.16.0",
     "bull-board": "^0.9.0",
     "cors": "^2.8.5",
+    "dockerode": "^3.2.1",
+    "dockerode-utils": "0.0.7",
     "express": "^4.17.1",
     "express-openapi": "^5.0.0",
     "express-openapi-validator": "^2.14.2",
@@ -48,6 +50,7 @@
     "@types/bull": "^3.14.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
+    "@types/dockerode": "^2.5.34",
     "@types/express": "^4.17.2",
     "@types/express-openapi": "^1.9.0",
     "@types/js-yaml": "^3.12.1",
