--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "firebase-admin": "^8.7.0",
     "fs-extra": "^8.1.0",
     "js-yaml": "^3.13.1",
+    "nodemailer": "^6.4.11",
     "path": "^0.12.7",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.8",
