--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.2.3",
     "@types/bull-board": "^0.6.0",
     "@types/fs-extra": "^8.0.1",
     "@types/request": "^2.48.3",
@@ -64,6 +65,7 @@
     "@types/mocha": "^8.0.2",
     "@types/morgan": "^1.7.37",
     "@types/node": "^12.12.7",
+    "@types/nodemailer": "^6.4.0",
     "@types/swagger-ui-express": "^4.1.1",
     "@types/yauzl": "^2.9.1",
     "body-parser": "^1.19.0",
