--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "cors": "^2.8.5",
     "dockerode": "^3.2.1",
     "dockerode-utils": "0.0.7",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-openapi": "^5.0.0",
     "express-openapi-validator": "^2.14.2",
