--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,3 @@
 GOOGLE_APPLICATION_CREDENTIALS=./src/config/mint-full-4dc148cc116b.json
-REDIS_URL=redis://redis:6379
+REDIS_URL=redis://localhost:6379
+SENDGRID_API_KEY=
