--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "start": "node --inspect=5858 -r ts-node/register ./src/server.ts",
     "start:watch": "nodemon",
-    "build": "tsc --build tsconfig.json"
+    "build": "tsc --build tsconfig.json",
+    "test": "mocha --timeout 1000000 --require ts-node/register 'src/**/*.spec.ts'"
   },
   "nodemonConfig": {
     "ignore": [
@@ -24,15 +25,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.2.3",
     "@types/bull-board": "^0.6.0",
     "@types/fs-extra": "^8.0.1",
     "@types/request": "^2.48.3",
     "@types/request-promise-native": "^1.0.17",
+    "archiver": "^5.0.0",
     "bull": "^3.16.0",
     "bull-board": "^0.9.0",
     "cors": "^2.8.5",
     "dockerode": "^3.2.1",
     "dockerode-utils": "0.0.7",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-openapi": "^5.0.0",
     "express-openapi-validator": "^2.14.2",
@@ -40,32 +44,42 @@
     "firebase-admin": "^8.7.0",
     "fs-extra": "^8.1.0",
     "js-yaml": "^3.13.1",
+    "nodemailer": "^6.4.11",
+    "path": "^0.12.7",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.8",
     "swagger-ui-express": "^4.1.3",
     "yauzl": "^2.10.0"
   },
   "devDependencies": {
+    "@types/archiver": "^3.1.0",
     "@types/body-parser": "^1.17.1",
     "@types/bull": "^3.14.0",
+    "@types/chai": "^4.2.12",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.6",
     "@types/dockerode": "^2.5.34",
+    "@types/expect": "^24.3.0",
     "@types/express": "^4.17.2",
     "@types/express-openapi": "^1.9.0",
     "@types/js-yaml": "^3.12.1",
+    "@types/mocha": "^8.0.2",
     "@types/morgan": "^1.7.37",
     "@types/node": "^12.12.7",
+    "@types/nodemailer": "^6.4.0",
     "@types/swagger-ui-express": "^4.1.1",
     "@types/yauzl": "^2.9.1",
     "body-parser": "^1.19.0",
+    "chai": "^4.2.0",
     "cookie-parser": "^1.4.4",
     "eslint": "^6.6.0",
     "eslint-plugin-import": "^2.18.2",
+    "mocha": "^8.1.1",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.4",
     "ts-md5": "^1.2.7",
-    "ts-node": "^8.4.1",
+    "ts-mocha": "^7.0.0",
+    "ts-node": "^8.10.2",
     "tslint": "^5.20.1",
     "typescript": "^3.7.2"
   }
