--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "3.0.0",
   "description": "",
   "scripts": {
-    "start": "ts-node",
+    "start": "ts-node ./dist/server.js",
     "start:watch": "npx webpack -w",
     "build": "npx webpack"
   },
