Using local config file instead of firebase

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
         }
     },
     "include": [
-        "typings/**/*.d.ts",
+        "src/typings/**/*.d.ts",
         "src/**/*.ts", "paths"
     ],
     "exclude": [
