--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
  - curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
  - chmod u+x ./kubectl
  - yarn
-   #cache: yarn
+cache: yarn
 script: yarn test
-before_deploy:
+after_script:
 - bash scripts/docker-push
