--- a/.kube/deploy.yml
+++ b/.kube/deploy.yml
@@ -18,6 +18,12 @@ spec:
       containers:
         - name: ensemble
           image: $DOCKER_ORG/$DOCKER_IMAGE:$COMMIT_SHA1
+          requests:
+            cpu: 100m
+            memory: 1024Mi
+          env:
+            - name: GET_HOSTS_FROM
+              value: dns
           ports:
             - containerPort: 3000
               name: http
