fix: update deploy

--- a/.kube/deploy.yml
+++ b/.kube/deploy.yml
@@ -17,13 +17,16 @@ spec:
     spec:
       containers:
         - name: ensemble
-          image: $DOCKER_ORG/$DOCKER_IMAGE:$COMMIT_SHA1
-          requests:
-            cpu: 100m
-            memory: 1024Mi
+-         image: $DOCKER_ORG/$DOCKER_IMAGE:$COMMIT_SHA1
+          resources:
+            requests:
+              cpu: 100m
+              memory: 128Mi
           env:
             - name: GET_HOSTS_FROM
               value: dns
+            - name: REDIS_URL
+              value: redis://redis-master:6379   
           ports:
             - containerPort: 3000
               name: http
