--- a/.kube/deploy.yml
+++ b/.kube/deploy.yml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: ensemble
--         image: $DOCKER_ORG/$DOCKER_IMAGE:$COMMIT_SHA1
+          image: $DOCKER_ORG/$DOCKER_IMAGE:$COMMIT_SHA1
           resources:
             requests:
               cpu: 100m
