--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "watch": [
       "src"
     ],
-    "exec": "npm start",
+    "exec": "npm run-script build && npm start",
     "ext": "ts"
   },
   "keywords": [],
@@ -43,6 +43,7 @@
     "request": "^2.88.0",
     "request-promise-native": "^1.0.8",
     "swagger-ui-express": "^4.1.3",
+    "tsc": "^1.20150623.0",
     "yauzl": "^2.10.0"
   },
   "devDependencies": {
