--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,7 +1,7 @@
 {
     "data_catalog_api": "https://api.mint-data-catalog.org",
     "ensemble_manager_api": "https://dev.ensemble.mint.isi.edu/v1",
-    "execution_engine": "localex",
+    "execution_engine": "slurm",
     "localex": {
         "codedir":"/data/storage/mint/local-execution/code",
         "datadir": "/data/storage/mint/data-catalog/production/local-execution",
@@ -10,6 +10,16 @@
         "logurl": "https://data.mint.isi.edu/files/local-execution/logs",
         "parallelism": 50
     }, 
+    "slurm": {
+        "codedir":"/tmp/data/storage/mint/local-execution/code",
+        "workdir":"/tmp",
+        "datadir": "/tmp/data/storage/mint/data-catalog/production/local-execution",
+        "dataurl": "https://data.mint.isi.edu/files/local-execution",
+        "logdir": "/tmp/data/storage/mint/data-catalog/production/local-execution/logs",
+        "logurl": "https://data.mint.isi.edu/files/local-execution/logs",
+        "numcores": 64,
+        "parallelism": 50
+    },
     "visualization_url": "https://dev.viz.mint.isi.edu",
     "ingestion_api": "https://node1.ingestion.mint.isi.edu/v1.3.0"    
 }
