--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "swagger-ui-express": "^4.1.3",
     "ts-loader": "^8.0.3",
     "tslib": "^1.9.3",
+    "node-localstorage": "^2.2.1",
     "webpack-dev-middleware": "^3.7.2",
     "yauzl": "^2.10.0"
   },
