--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "3.0.0",
   "description": "",
   "scripts": {
-    "start": "ts-node ./dist/server.js",
+    "start": "ts-node -r node-localstorage/register ./dist/server.js",
     "start:watch": "npx webpack -w",
     "build": "npx webpack"
   },
@@ -48,6 +48,7 @@
     "graphql": "^15.3.0",
     "graphql-tag": "^2.11.0",
     "js-yaml": "^3.13.1",
+    "node-localstorage": "^2.2.1",
     "nodemon-webpack-plugin": "^4.3.2",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.8",
@@ -55,7 +56,6 @@
     "swagger-ui-express": "^4.1.3",
     "ts-loader": "^8.0.3",
     "tslib": "^1.9.3",
-    "node-localstorage": "^2.2.1",
     "webpack-dev-middleware": "^3.7.2",
     "yauzl": "^2.10.0"
   },
