--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "subscriptions-transport-ws": "^0.9.18",
     "swagger-ui-express": "^4.1.3",
     "ts-loader": "^8.0.3",
+    "tsconfig-paths": "^4.1.0",
     "tslib": "^1.9.3",
     "webpack-dev-middleware": "^3.7.2",
     "yauzl": "^2.10.0"
@@ -78,7 +79,7 @@
     "eslint-plugin-import": "^2.18.2",
     "nodemon": "^1.19.4",
     "ts-md5": "^1.2.7",
-    "ts-node": "^8.4.1",
+    "ts-node": "^8.10.2",
     "tslint": "^5.20.1",
     "typescript": "^3.9.7",
     "webpack": "^4.44.1",
