--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mint-ensemble-manager",
-  "version": "4.0.0",
+  "version": "4.1.0",
   "description": "",
   "scripts": {
     "start": "ts-node -r node-localstorage/register ./dist/server.js",
@@ -30,7 +30,7 @@
     "@types/fs-extra": "^8.0.1",
     "@types/request": "^2.48.3",
     "@types/request-promise-native": "^1.0.17",
-    "@types/webpack": "^4.41.22",
+    "@types/webpack": "^5.28.0",
     "@types/webpack-dev-middleware": "^3.7.2",
     "apollo-boost": "^0.4.9",
     "bull": "^3.16.0",
@@ -54,9 +54,9 @@
     "request-promise-native": "^1.0.8",
     "subscriptions-transport-ws": "^0.9.18",
     "swagger-ui-express": "^4.1.3",
-    "ts-loader": "^8.0.3",
+    "ts-loader": "^9.4.1",
     "tsconfig-paths": "^4.1.0",
-    "tslib": "^1.9.3",
+    "tslib": "^2.4.1",
     "webpack-dev-middleware": "^3.7.2",
     "yauzl": "^2.10.0"
   },
@@ -72,17 +72,18 @@
     "@types/node": "^12.12.7",
     "@types/swagger-ui-express": "^4.1.1",
     "@types/yauzl": "^2.9.1",
+    "@typescript-eslint/eslint-plugin": "^5.44.0",
+    "@typescript-eslint/parser": "^5.44.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "copy-webpack-plugin": "^6.1.0",
-    "eslint": "^6.6.0",
+    "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.18.2",
     "nodemon": "^1.19.4",
-    "ts-md5": "^1.2.7",
-    "ts-node": "^8.10.2",
-    "tslint": "^5.20.1",
-    "typescript": "^3.9.7",
-    "webpack": "^4.44.1",
+    "ts-md5": "^1.3.1",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3",
+    "webpack": "^5.75.0",
     "webpack-cli": "^3.3.12",
     "webpack-node-externals": "^2.5.2"
   }
