--- a/package.json
+++ b/package.json
@@ -26,22 +26,22 @@
   "dependencies": {
     "@apollo/client": "^3.1.4",
     "@mintproject/modelcatalog_client": "^8.0.0",
-    "@types/bull-board": "^0.6.0",
     "@types/fs-extra": "^8.0.1",
     "@types/request": "^2.48.3",
     "@types/request-promise-native": "^1.0.17",
     "@types/webpack": "^5.28.0",
     "@types/webpack-dev-middleware": "^3.7.2",
     "apollo-boost": "^0.4.9",
-    "bull": "^3.16.0",
-    "bull-board": "^0.9.0",
+    "bull": "^4.10.2",
+    "@bull-board/express": "^4.6.4",
+    "@bull-board/api": "^4.6.4",
     "cors": "^2.8.5",
     "cross-fetch": "^3.0.5",
     "dockerode": "^3.2.1",
     "dockerode-utils": "0.0.7",
     "express": "^4.17.1",
     "express-openapi": "^5.0.0",
-    "express-openapi-validator": "^2.14.2",
+    "express-openapi-validator": "^5.0.0",
     "fetch": "^1.1.0",
     "form-data": "^2.3.3",
     "fs-extra": "^8.1.0",
@@ -79,7 +79,7 @@
     "copy-webpack-plugin": "^6.1.0",
     "eslint": "^6.8.0",
     "eslint-plugin-import": "^2.18.2",
-    "nodemon": "^1.19.4",
+    "nodemon": "^2.0.20",
     "ts-md5": "^1.3.1",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3",
