--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "nodemon-webpack-plugin": "^4.3.2",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.8",
-    "subscriptions-transport-ws": "^0.9.18",
+    "graphql-ws": "^5.11.2",
     "swagger-ui-express": "^4.1.3",
     "ts-loader": "^9.4.1",
     "tsconfig-paths": "^4.1.0",
