--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
         "start:watch": "npx webpack -w",
         "build": "npx webpack",
         "test": "echo \"Error: no test specified\"",
+        "lint-staged": "lint-staged",
+        "eslint:fix": "eslint --quiet --fix",
+        "prettier:fix": "prettier --write --ignore-unknown",
         "prepare": "husky"
     },
     "nodemonConfig": {
@@ -90,9 +93,12 @@
         "cookie-parser": "^1.4.4",
         "copy-webpack-plugin": "^6.1.0",
         "eslint": "^8.0.0",
+        "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-import": "^2.18.2",
         "husky": "^9.0.10",
+        "lint-staged": "^15.2.2",
         "nodemon": "^2.0.20",
+        "prettier": "^3.2.5",
         "ts-md5": "^1.3.1",
         "ts-node": "^10.9.1",
         "typescript": "^4.9.3",
