--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -1,8 +1,8 @@
 printWidth: 100
 tabWidth: 4
-singleQuote: true
+singleQuote: false
 semi: true
-jsxSingleQuote: true
+jsxSingleQuote: false
 quoteProps: as-needed
 trailingComma: none
 bracketSpacing: true
