--- a/package.json
+++ b/package.json
@@ -1,91 +1,105 @@
 {
-  "name": "mint-ensemble-manager",
-  "version": "4.1.0",
-  "description": "",
-  "scripts": {
-    "start": "ts-node -r node-localstorage/register ./dist/server.js",
-    "start:watch": "npx webpack -w",
-    "build": "npx webpack"
-  },
-  "nodemonConfig": {
-    "ignore": [
-      "**/*.test.ts",
-      "**/*.spec.ts",
-      ".git",
-      "node_modules"
-    ],
-    "watch": [
-      "src"
-    ],
-    "exec": "npm run-script build && npm start",
-    "ext": "ts"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "@apollo/client": "^3.7.1",
-    "@mintproject/modelcatalog_client": "^8.0.0",
-    "@types/fs-extra": "^8.0.1",
-    "@types/request": "^2.48.3",
-    "@types/request-promise-native": "^1.0.17",
-    "@types/webpack": "^5.28.0",
-    "@types/webpack-dev-middleware": "^3.7.2",
-    "apollo-boost": "^0.4.9",
-    "react-dom": "^18.2.0",
-    "bull": "^4.10.2",
-    "@bull-board/express": "^4.6.4",
-    "@bull-board/api": "^4.6.4",
-    "cors": "^2.8.5",
-    "cross-fetch": "^3.0.5",
-    "dockerode": "^3.2.1",
-    "dockerode-utils": "0.0.7",
-    "express": "^4.17.1",
-    "express-openapi": "^5.0.0",
-    "express-openapi-validator": "^5.0.0",
-    "fetch": "^1.1.0",
-    "form-data": "^2.3.3",
-    "fs-extra": "^8.1.0",
-    "graphql": "^15.3.0",
-    "graphql-tag": "^2.11.0",
-    "js-yaml": "^3.13.1",
-    "node-localstorage": "^2.2.1",
-    "nodemon-webpack-plugin": "^4.3.2",
-    "request": "^2.88.0",
-    "request-promise-native": "^1.0.8",
-    "graphql-ws": "^5.11.2",
-    "swagger-ui-express": "^4.1.3",
-    "ts-loader": "^9.4.1",
-    "tsconfig-paths": "^4.1.0",
-    "tslib": "^2.4.1",
-    "webpack-dev-middleware": "^3.7.2",
-    "yauzl": "^2.10.0"
-  },
-  "devDependencies": {
-    "@types/body-parser": "^1.17.1",
-    "@types/bull": "^3.14.0",
-    "@types/cookie-parser": "^1.4.2",
-    "@types/cors": "^2.8.6",
-    "@types/dockerode": "^2.5.34",
-    "@types/express": "^4.17.2",
-    "@types/express-openapi": "^1.9.0",
-    "@types/js-yaml": "^3.12.1",
-    "@types/node": "^12.12.7",
-    "@types/swagger-ui-express": "^4.1.1",
-    "@types/yauzl": "^2.9.1",
-    "@typescript-eslint/eslint-plugin": "^5.44.0",
-    "@typescript-eslint/parser": "^5.44.0",
-    "body-parser": "^1.19.0",
-    "cookie-parser": "^1.4.4",
-    "copy-webpack-plugin": "^6.1.0",
-    "eslint": "^6.8.0",
-    "eslint-plugin-import": "^2.18.2",
-    "nodemon": "^2.0.20",
-    "ts-md5": "^1.3.1",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.3",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.0",
-    "webpack-node-externals": "^3.0.0"
-  }
+    "name": "mint-ensemble-manager",
+    "version": "4.1.0",
+    "description": "",
+    "scripts": {
+        "start": "ts-node -r node-localstorage/register ./dist/server.js",
+        "start:watch": "npx webpack -w",
+        "build": "npx webpack",
+        "test": "echo \"Error: no test specified\"",
+        "lint-staged": "lint-staged",
+        "eslint:fix": "eslint --quiet --fix",
+        "prettier:fix": "prettier --write --ignore-unknown",
+        "prepare": "husky && husky install"
+    },
+    "nodemonConfig": {
+        "ignore": [
+            "**/*.test.ts",
+            "**/*.spec.ts",
+            ".git",
+            "node_modules"
+        ],
+        "watch": [
+            "src"
+        ],
+        "exec": "npm run-script build && npm start",
+        "ext": "ts"
+    },
+    "lint-staged": {
+        "src/*.ts": [
+            "prettier --write"
+        ]
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "@apollo/client": "^3.7.1",
+        "@bull-board/api": "^4.6.4",
+        "@bull-board/express": "^4.6.4",
+        "@mintproject/modelcatalog_client": "^8.0.0",
+        "@types/fs-extra": "^8.0.1",
+        "@types/request": "^2.48.3",
+        "@types/request-promise-native": "^1.0.17",
+        "@types/webpack": "^5.28.0",
+        "@types/webpack-dev-middleware": "^3.7.2",
+        "apollo-boost": "^0.4.9",
+        "bull": "^4.10.2",
+        "cors": "^2.8.5",
+        "cross-fetch": "^3.0.5",
+        "dockerode": "^3.2.1",
+        "dockerode-utils": "0.0.7",
+        "express": "^4.17.1",
+        "express-openapi": "^5.0.0",
+        "express-openapi-validator": "^5.0.0",
+        "fetch": "^1.1.0",
+        "form-data": "^2.3.3",
+        "fs-extra": "^8.1.0",
+        "graphql": "^15.3.0",
+        "graphql-tag": "^2.11.0",
+        "graphql-ws": "^5.11.2",
+        "js-yaml": "^3.13.1",
+        "node-localstorage": "^2.2.1",
+        "nodemon-webpack-plugin": "^4.3.2",
+        "react-dom": "^18.2.0",
+        "request": "^2.88.0",
+        "request-promise-native": "^1.0.8",
+        "swagger-ui-express": "^4.1.3",
+        "ts-loader": "^9.4.1",
+        "tsconfig-paths": "^4.1.0",
+        "tslib": "^2.4.1",
+        "webpack-dev-middleware": "^3.7.2",
+        "yauzl": "^2.10.0"
+    },
+    "devDependencies": {
+        "@types/body-parser": "^1.17.1",
+        "@types/bull": "^3.14.0",
+        "@types/cookie-parser": "^1.4.2",
+        "@types/cors": "^2.8.6",
+        "@types/dockerode": "^2.5.34",
+        "@types/express": "^4.17.2",
+        "@types/express-openapi": "^1.9.0",
+        "@types/js-yaml": "^3.12.1",
+        "@types/node": "^12.12.7",
+        "@types/swagger-ui-express": "^4.1.1",
+        "@types/yauzl": "^2.9.1",
+        "@typescript-eslint/eslint-plugin": "^6.21.0",
+        "@typescript-eslint/parser": "^6.21.0",
+        "body-parser": "^1.19.0",
+        "cookie-parser": "^1.4.4",
+        "copy-webpack-plugin": "^6.1.0",
+        "eslint": "^8.0.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-import": "^2.18.2",
+        "husky": "^8.0.0",
+        "lint-staged": "^15.2.2",
+        "nodemon": "^2.0.20",
+        "prettier": "^3.2.5",
+        "ts-md5": "^1.3.1",
+        "ts-node": "^10.9.1",
+        "typescript": "^4.9.3",
+        "webpack": "^5.75.0",
+        "webpack-cli": "^5.0.0",
+        "webpack-node-externals": "^3.0.0"
+    }
 }
