--- a/package.json
+++ b/package.json
@@ -94,10 +94,11 @@
         "husky": "^8.0.0",
         "lint-staged": "^15.2.2",
         "nodemon": "^2.0.20",
+        "openapi-typescript": "^6.7.4",
         "prettier": "^3.2.5",
         "ts-md5": "^1.3.1",
         "ts-node": "^10.9.1",
-        "typescript": "^4.9.3",
+        "typescript": "^4.9.5",
         "webpack": "^5.75.0",
         "webpack-cli": "^5.0.0",
         "webpack-node-externals": "^3.0.0"
