--- a/src/config/config.json
+++ b/src/config/config.json
@@ -1,9 +1,9 @@
 {
-    "data_catalog_api": "http://localhost:30002",
-    "model_catalog_api": "http://localhost:30004/v1.8.0",
-    "ensemble_manager_api": "http://localhost:30008/v1",
+    "data_catalog_api": "http://datacatalog.mint.local",
+    "model_catalog_api": "http://api.models.mint.local/v1.8.0",
+    "ensemble_manager_api": "http://localhost:3000/v1",
     "graphql": {
-       "endpoint": "127.0.0.1:30003/v1/graphql",
+       "endpoint": "graphql.mint.local/v1/graphql",
        "enable_ssl": false,
        "use_secret": true
     },
@@ -17,7 +17,7 @@
        "logurl":"http://file:///tmp/mintproject/logs",
        "parallelism": 2
     },
- 
+
     "auth_server": "https://auth.mint.isi.edu/",
     "auth_realm": "production",
     "auth_client_id": "mint-ui",
