--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
         "start": "ts-node -r node-localstorage/register ./dist/server.js",
         "start:watch": "npx webpack -w",
         "build": "npx webpack",
-        "test": "echo \"Error: no test specified\"",
+        "test": "jest",
         "lint-staged": "lint-staged",
         "eslint:fix": "eslint --quiet --fix",
         "prettier:fix": "prettier --write --ignore-unknown",
@@ -79,6 +79,7 @@
         "@types/dockerode": "^2.5.34",
         "@types/express": "^4.17.2",
         "@types/express-openapi": "^1.9.0",
+        "@types/jest": "^29.5.12",
         "@types/js-yaml": "^3.12.1",
         "@types/node": "^12.12.7",
         "@types/swagger-ui-express": "^4.1.1",
@@ -92,9 +93,11 @@
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-import": "^2.18.2",
         "husky": "^8.0.0",
+        "jest": "^29.7.0",
         "lint-staged": "^15.2.2",
         "nodemon": "^2.0.20",
         "prettier": "^3.2.5",
+        "ts-jest": "^29.1.4",
         "ts-md5": "^1.3.1",
         "ts-node": "^10.9.1",
         "typescript": "^4.9.3",
