--- a/package.json
+++ b/package.json
@@ -72,6 +72,10 @@
         "yauzl": "^2.10.0"
     },
     "devDependencies": {
+        "@babel/core": "^7.24.7",
+        "@babel/preset-env": "^7.24.7",
+        "@babel/preset-flow": "^7.24.7",
+        "@babel/preset-typescript": "^7.24.7",
         "@types/body-parser": "^1.17.1",
         "@types/bull": "^3.14.0",
         "@types/cookie-parser": "^1.4.2",
@@ -86,6 +90,7 @@
         "@types/yauzl": "^2.9.1",
         "@typescript-eslint/eslint-plugin": "^6.21.0",
         "@typescript-eslint/parser": "^6.21.0",
+        "babel-jest": "^29.7.0",
         "body-parser": "^1.19.0",
         "cookie-parser": "^1.4.4",
         "copy-webpack-plugin": "^6.1.0",
