--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,23 +11,12 @@
 
         "experimentalDecorators": true,
         "emitDecoratorMetadata": true,
-        "lib": [
-          "dom",
-          "esnext"
-        ],  
+        "lib": ["dom", "esnext"],
 
         "paths": {
-            "*": [
-                "node_modules/*"
-            ]
+            "*": ["node_modules/*"]
         }
     },
-    "include": [
-        "src/typings/**/*.d.ts",
-        "src/**/*.ts", "paths"
-    ],
-    "exclude": [
-        "node_modules",
-        ".vscode"
-    ]
+    "include": ["src/typings/**/*.d.ts", "src/**/*.ts", "paths"],
+    "exclude": ["node_modules", ".vscode"]
 }
