--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "",
     "scripts": {
         "start": "ts-node -r node-localstorage/register ./dist/server.js",
-        "start:watch": "npx webpack -w",
+        "start:watch": "nodemon ./dist/server.js",
         "build": "npx webpack",
-        "test": "jest",
+        "test": "ENSEMBLE_MANAGER_CONFIG_FILE=src/config/config.json  jest",
         "lint-staged": "lint-staged",
         "eslint:fix": "eslint --quiet --fix",
         "prettier:fix": "prettier --write --ignore-unknown",
@@ -77,6 +77,7 @@
         "@babel/preset-env": "^7.24.7",
         "@babel/preset-flow": "^7.24.7",
         "@babel/preset-typescript": "^7.24.7",
+        "@graphql-tools/jest-transform": "^2.0.0",
         "@types/body-parser": "^1.17.1",
         "@types/bull": "^3.14.0",
         "@types/cookie-parser": "^1.4.2",
