--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
         "@bull-board/api": "^4.6.4",
         "@bull-board/express": "^4.6.4",
         "@mintproject/modelcatalog_client": "^8.0.0",
-        "@tapis/tapis-typescript": "/Users/mosorio/repos/tapis/external/tapis-typescript-fork/tapis-typescript",
+        "@mfosorio/tapis-typescript": "0.0.30",
         "@types/fs-extra": "^8.0.1",
         "@types/request": "^2.48.3",
         "@types/request-promise-native": "^1.0.17",
