--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
     "description": "",
     "scripts": {
         "start": "ts-node -r node-localstorage/register ./dist/server.js",
-        "start:watch": "npx webpack -w",
+        "start:watch": "nodemon ./dist/server.js",
         "build": "npx webpack",
-        "test": "echo \"Error: no test specified\"",
+        "test": "ENSEMBLE_MANAGER_CONFIG_FILE=src/config/config.json  jest",
         "lint-staged": "lint-staged",
         "eslint:fix": "eslint --quiet --fix",
         "prettier:fix": "prettier --write --ignore-unknown",
@@ -38,6 +38,7 @@
         "@bull-board/api": "^4.6.4",
         "@bull-board/express": "^4.6.4",
         "@mintproject/modelcatalog_client": "^8.0.0",
+        "@mfosorio/tapis-typescript": "0.0.30",
         "@types/fs-extra": "^8.0.1",
         "@types/request": "^2.48.3",
         "@types/request-promise-native": "^1.0.17",
@@ -72,6 +73,11 @@
         "yauzl": "^2.10.0"
     },
     "devDependencies": {
+        "@babel/core": "^7.24.7",
+        "@babel/preset-env": "^7.24.7",
+        "@babel/preset-flow": "^7.24.7",
+        "@babel/preset-typescript": "^7.24.7",
+        "@graphql-tools/jest-transform": "^2.0.0",
         "@types/body-parser": "^1.17.1",
         "@types/bull": "^3.14.0",
         "@types/cookie-parser": "^1.4.2",
@@ -79,12 +85,14 @@
         "@types/dockerode": "^2.5.34",
         "@types/express": "^4.17.2",
         "@types/express-openapi": "^1.9.0",
+        "@types/jest": "^29.5.12",
         "@types/js-yaml": "^3.12.1",
         "@types/node": "^12.12.7",
         "@types/swagger-ui-express": "^4.1.1",
         "@types/yauzl": "^2.9.1",
         "@typescript-eslint/eslint-plugin": "^6.21.0",
         "@typescript-eslint/parser": "^6.21.0",
+        "babel-jest": "^29.7.0",
         "body-parser": "^1.19.0",
         "cookie-parser": "^1.4.4",
         "copy-webpack-plugin": "^6.1.0",
@@ -92,9 +100,11 @@
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-import": "^2.18.2",
         "husky": "^8.0.0",
+        "jest": "^29.7.0",
         "lint-staged": "^15.2.2",
         "nodemon": "^2.0.20",
         "prettier": "^3.2.5",
+        "ts-jest": "^29.1.4",
         "ts-md5": "^1.3.1",
         "ts-node": "^10.9.1",
         "typescript": "^4.9.3",
