add: support backend (#34)
* add: package

* add: test file

* fix: disable arm64

* fix: arm64

* fix: push

* fix: wrong label

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -56,8 +56,7 @@ jobs:
                   context: .
                   tags: ${{ env.DOCKER_IMAGE_REPOSITORY }}/${{ env.DOCKER_IMAGE_NAME }}:${{ steps.branch-name.outputs.current_branch }}, ${{ env.DOCKER_IMAGE_REPOSITORY }}/${{ env.DOCKER_IMAGE_NAME }}:${{ env.DOCKER_TAG }}
                   file: ${{ env.DOCKER_FILE}}
-                  platforms: linux/amd64
-
+                  platforms: linux/amd64, linux/arm64
     security:
         permissions:
             contents: read
